--- a/JRNL80/index.html
+++ b/JRNL80/index.html
@@ -3,7 +3,8 @@
   </head>
 
   <body>
-  Welcome to my web page!
+  <h1>Welcome to my web page!<h1>
+    My name is Keith Marlor. I'm a student at Hofstra University
   
   </body>
 
