--- a/JRNL80/swiper/index.html
+++ b/JRNL80/swiper/index.html
@@ -45,8 +45,8 @@
   <div class="swiper-container">
     <div class="swiper-wrapper">
       <div class="swiper-slide">Belmont Stakes Celebrates 150th Anniversary</div>
-      <div class="swiper-slide"><p>img src=http://www.espn.com/sports/horse/photos/gallery/_/id/8042894/image/3/144th-belmont-stakes-144th-belmont-stakes-photo-gallery </div>
-      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide"><p>img src=http://www.espn.com/sports/horse/photos/gallery/_/id/8042894/image/3/144th-belmont-stakes-144th-belmont-stakes-photo-gallery  </div>
+      <div class="swiper-slide"><div class="center></div>
       <div class="swiper-slide">Slide 4</div>
       <div class="swiper-slide">Slide 5</div>
       <div class="swiper-slide">Slide 6</div>
